# EasyPOS

./: .gitignore  EasyPOS.spec  EasyPOS.spec.spec  EasyPOS_Windows.spec  README.md  easypos.spec.old  easypos_config.json  pyproject.toml  requirements.txt
db/: 001_init.sql.old  data.json  data.sql  data2.json  items.json  schema.sql
db/migrations/: 001_init.sql
src/easypos/: app.py  database.py  logger.py  main.py  printer.py  settings.py  test_printer.py
src/easypos/config/: db_config.py
src/easypos/controllers/: item.py  sale.py  shopping_cart.py
src/easypos/database/: bootstrap.py  connection.py  migrate.py  seeder.py
src/easypos/models/: category.py  item.py  sale.py  ticket.py
src/easypos/printer/: consumer.py  easy_printer.py  fake_printer.py  printer_manager.py  styles.py
src/easypos/ui/: layout_left.py  layout_right.py  settings.py  styles.py  ui_app.py
src/easypos/ui/components/: hover_button.py  shopping_cart_item.py
src/easypos/ui/frames/: frame_actions.py  frame_categories.py  frame_items.py  frame_shopping_cart.py
src/easypos/ui/windows/: window_app_info.py  window_printer_config.py
src/easypos/utils/: utils.py
utils/: convert_svg_to_png.py
