[project]
name = "easypos"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Silva",email = "samuelsilva2310@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <=3.14"

dependencies = [
    "python-escpos[all] (>=3.1,<4.0)",
    "customtkinter (>=5.2.2,<6.0.0)",
    "cairosvg (>=2.8.2,<3.0.0)",
    "platformdirs (>=4.5.0,<5.0.0)",
    "pyinstaller (>=6.16.0,<7.0.0)",
]

[tool.poetry]
packages = [{include = "easypos", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyinstaller (>=6.16.0,<7.0.0)"
]
